@@ -13,6 +13,7 @@
         "Automatic_Train_Painter >= 1.1.4",
         "BetterAlertArrows >= 1.0.0",
         "belt-reverserup >= 0.0.9",
+        "BigLight >= 0.1.3",
         "Blueprint-Editor >= 3.1.0",
         "BlueprintSignals_continued >= 0.4.0",
         "BlueprintTools >= 1.2.2",
