@@ -3,6 +3,7 @@ Version: 999.999.999
 Date: 9999-99-99
   Changes:
   Features:
+    - Improved visibility for power switch and train stop status light indicators (via "Big Light")
   Bugfixes:
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.0
